fixed padding and spacing

--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,8 @@ body {
   position: relative; 
   background: #fff6f1;
   font-family: 'Hind Siliguri', sans-serif;
-  padding: 20px;
+  padding-top: 30px;
+  padding-bottom: 5px;
   /* background-color: chartreuse; */
   
 }
@@ -116,11 +117,11 @@ body {
   /* background-color: rgba(35, 126, 175, 0.139); */
   background-color: rgba(126, 165, 206, 0.166);
   color: #000000;
-  padding-bottom: 90px;
+  padding-bottom: 30px;
 }
 
 #recent-work-header {
-  padding-top: 30px;
+  padding-top: 20px;
   font-family: 'Hind Siliguri', sans-serif;
 }
 
@@ -158,7 +159,7 @@ body {
   /* border: 1px solid rgb(0, 0, 0); */
   /* border-radius: 10px; */
 
-  margin-top: 60px;
+  margin-top: 30px;
   margin-left: 15px;
   margin-right: 15px;
   font-size: 17px;
@@ -203,7 +204,7 @@ body {
 #resume-header {
   /* font-size: 32px; */
   text-decoration: underline;
-  padding-top: 50px;
+  padding-top: 30px;
   margin-bottom: 5px;
   text-align: left;
   margin-left: 20px;
@@ -278,7 +279,7 @@ body {
 #projects-div {
   margin-top: 0px;
   /* min-height: 100vh; */
-  padding-top: 30px;
+  padding-top: 20px;
   padding-bottom: 20px;
   position: relative;
   /* background-color: rgba(32, 105, 131, 0.303); */
@@ -297,12 +298,16 @@ body {
   font-family: 'Hind Siliguri', sans-serif; 
 }
 
+.projects {
+
+  padding-bottom: 0px;
+}
+
 #projects-margin {
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
   margin-top: 2%;
-  /* margin-bottom: 2%; */
   margin-left: 5%;
   margin-right: 5%;
   /* margin: 4%; */
